--- a/html/cliente/register.html
+++ b/html/cliente/register.html
@@ -7,16 +7,17 @@
     <link rel="stylesheet" href="/css/cliente.css">
     <title> Veterinaria Huellitas</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.min.js" integrity="sha384-7VPbUDkoPSGFnVtYi0QogXtr74QeVeeIs99Qfg5YCF+TidwNdjvaKZX19NZ/e6oz" crossorigin="anonymous"></script>
 </head>
 <body>
     <div class="container-fluid">
-        <div class="head">
-            <div class="logo-header">
+        <div class="head row">
+            <div class="logo-header col-2">
                 <img class="logo" src="/assets/logo2.PNG" alt="logo Huellitas">
                 <span class="header-title">Veterinaria Huellitas</span>
             </div>
-            <div>
+            <div class="col-auto">
                 <a class="btn btn-primary" href="/index.html" role="button">Regresar</a>
             </div>
         </div>
