css de login y register ok

--- a/html/cliente/register.html
+++ b/html/cliente/register.html
@@ -21,62 +21,62 @@
                 <a class="btn btn-primary" href="/index.html" role="button">Regresar</a>
             </div>
         </div>
-        <div class="form p-5">
+        <div class="form">
             <span class="form-title">Registro</span>
             <div class="item row g-3">
-                <div class="col-auto">
-                    <label for="inputPassword6" class="col-form-label">Nombre</label>
+                <div class="col">
+                    <label for="inputName" class="col-form-label">Nombre</label>
                 </div>
-                <div class="col-auto">
-                    <input type="text" id="inputPassword6" class="form-control">
-                </div>
-            </div>
-            <div class="item row g-3">
-                <div class="col-auto">
-                    <label for="inputPassword6" class="col-form-label">Cédula</label>
-                </div>
-                <div class="col-auto">
-                    <input type="number" id="inputPassword6" class="form-control">
+                <div class="col">
+                    <input type="text" id="inputName" class="form-control">
                 </div>
             </div>
             <div class="item row g-3">
-                <div class="col-auto">
-                    <label for="inputPassword6" class="col-form-label">Teléfono</label>
+                <div class="col">
+                    <label for="inputID" class="col-form-label">Cédula</label>
                 </div>
-                <div class="col-auto">
-                    <input type="number" id="inputPassword6" class="form-control">
-                </div>
-            </div>
-            <div class="item row g-3">
-                <div class="col-auto">
-                    <label for="inputPassword6" class="col-form-label">E-mail</label>
-                </div>
-                <div class="col-auto">
-                    <input type="email" id="inputPassword6" class="form-control">
+                <div class="col">
+                    <input type="number" id="inputID" class="form-control">
                 </div>
             </div>
             <div class="item row g-3">
-                <div class="col-auto">
-                    <label for="inputPassword6" class="col-form-label">Usuario</label>
+                <div class="col">
+                    <label for="inputTel" class="col-form-label">Teléfono</label>
                 </div>
-                <div class="col-auto">
-                    <input type="text" id="inputPassword6" class="form-control">
-                </div>
-            </div>
-            <div class="item row g-3">
-                <div class="col-auto">
-                    <label for="inputPassword6" class="col-form-label">Contraseña</label>
-                </div>
-                <div class="col-auto">
-                    <input type="password" id="inputPassword6" class="form-control">
+                <div class="col">
+                    <input type="tel" id="inputTel" class="form-control">
                 </div>
             </div>
             <div class="item row g-3">
-                <div class="col-auto">
-                    <label for="inputPassword6" class="col-form-label">Confirmar contraseña</label>
+                <div class="col">
+                    <label for="inputEmail" class="col-form-label">E-mail</label>
                 </div>
-                <div class="col-auto">
-                    <input type="password" id="inputPassword6" class="form-control">
+                <div class="col">
+                    <input type="email" id="inputEmail" class="form-control">
+                </div>
+            </div>
+            <div class="item row g-3">
+                <div class="col">
+                    <label for="inputUser" class="col-form-label">Usuario</label>
+                </div>
+                <div class="col">
+                    <input type="text" id="inputUser" class="form-control">
+                </div>
+            </div>
+            <div class="item row g-3">
+                <div class="col">
+                    <label for="inputPassword" class="col-form-label">Contraseña</label>
+                </div>
+                <div class="col">
+                    <input type="password" id="inputPassword" class="form-control">
+                </div>
+            </div>
+            <div class="item row g-3">
+                <div class="col">
+                    <label for="inputRepeatPassword" class="col-form-label">Confirmar contraseña</label>
+                </div>
+                <div class="col">
+                    <input type="password" id="inputRepeatPassword" class="form-control">
                 </div>
             </div>
             <button type="submit" class="btn btn-primary">Ingresar</button>
