--- a/html/cliente/login.html
+++ b/html/cliente/login.html
@@ -21,27 +21,27 @@
                 <a class="btn btn-primary" href="/index.html" role="button">Regresar</a>
             </div>
         </div>
-        <div class="form p-5">
+        <div class="form">
             <span class="form-title">Inicia sesión</span>
             <div class="item row g-3">
-                <div class="col-auto">
-                    <label for="inputPassword6" class="col-form-label">Usuario</label>
+                <div class="col">
+                    <label for="inputUser" class="col-form-label">Usuario</label>
                 </div>
-                <div class="col-auto">
-                    <input type="text" id="inputPassword6" class="form-control">
+                <div class="col">
+                    <input type="text" id="inputUser" class="form-control">
                 </div>
             </div>
             <div class="item row g-3">
-                <div class="col-auto">
-                    <label for="inputPassword6" class="col-form-label">Password</label>
+                <div class="col">
+                    <label for="inputPassword" class="col-form-label">Password</label>
                 </div>
-                <div class="col-auto">
-                    <input type="password" id="inputPassword6" class="form-control">
+                <div class="col">
+                    <input type="password" id="inputPassword" class="form-control">
                 </div>
             </div>
             <button type="submit" class="btn btn-primary">Ingresar</button>
-            <a href="#">Olvidé mi contraseña</a>
-            <span class="register-link">¿No tienes cuenta?<a href="/html/cliente/register.html"> Regístrate</a></span>
+            <a class="link" href="#">Olvidé mi contraseña</a>
+            <span class="register-link">¿No tienes cuenta? <a class="link" href="/html/cliente/register.html">Regístrate</a></span>
         </div>
         <footer>
             <h6>Misión TIC Todos los derechos reservados ©</h6>
