--- a/html/veterinario/login.html
+++ b/html/veterinario/login.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/cliente.css">
+    <link rel="stylesheet" href="/css/veterinario.css">
     <title> Veterinaria Huellitas</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
@@ -12,36 +12,36 @@
 </head>
 <body>
     <div class="container-fluid">
-        <div class="head">
-            <div class="logo-header">
+        <div class="head row">
+            <div class="logo-header col-2">
                 <img class="logo" src="/assets/logo2.PNG" alt="logo Huellitas">
                 <span class="header-title">Veterinaria Huellitas</span>
             </div>
-            <div>
+            <div class="col-auto">
                 <a class="btn btn-primary" href="/index.html" role="button">Regresar</a>
             </div>
         </div>
-        <div class="form p-5">
+        <div class="form">
             <span class="form-title">Inicia sesión</span>
             <div class="item row g-3">
-                <div class="col-auto">
-                    <label for="inputPassword6" class="col-form-label">Usuario</label>
+                <div class="col">
+                    <label for="inputUser" class="col-form-label">Usuario</label>
                 </div>
-                <div class="col-auto">
-                    <input type="text" id="inputPassword6" class="form-control">
+                <div class="col">
+                    <input type="text" id="inputUser" class="form-control">
                 </div>
             </div>
             <div class="item row g-3">
-                <div class="col-auto">
-                    <label for="inputPassword6" class="col-form-label">Password</label>
+                <div class="col">
+                    <label for="inputPassword" class="col-form-label">Password</label>
                 </div>
-                <div class="col-auto">
-                    <input type="password" id="inputPassword6" class="form-control">
+                <div class="col">
+                    <input type="password" id="inputPassword" class="form-control">
                 </div>
             </div>
             <button type="submit" class="btn btn-primary">Ingresar</button>
-            <a href="#">Olvidé mi contraseña</a>
-            <span class="register-link">¿No tienes cuenta?<a href="/html/cliente/register.html"> Regístrate</a></span>
+            <a class="link" href="#">Olvidé mi contraseña</a>
+            <span>¿No tienes cuenta? <a class="link" href="/html/veterinario/register.html">Regístrate</a></span>
         </div>
         <footer>
             <h6>Misión TIC Todos los derechos reservados ©</h6>
