--- a/html/veterinario/register.html
+++ b/html/veterinario/register.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/cliente.css">
+    <link rel="stylesheet" href="/css/veterinario.css">
     <title> Veterinaria Huellitas</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
@@ -21,75 +21,75 @@
                 <a class="btn btn-primary" href="/index.html" role="button">Regresar</a>
             </div>
         </div>
-        <div class="form p-5">
+        <div class="form">
             <span class="form-title">Registro</span>
             <div class="item row g-3">
-                <div class="col-auto">
-                    <label for="inputPassword6" class="col-form-label">Nombre</label>
+                <div class="col">
+                    <label for="inputName" class="col-form-label">Nombre</label>
                 </div>
-                <div class="col-auto">
-                    <input type="text" id="inputPassword6" class="form-control">
-                </div>
-            </div>
-            <div class="item row g-3">
-                <div class="col-auto">
-                    <label for="inputPassword6" class="col-form-label">Cédula</label>
-                </div>
-                <div class="col-auto">
-                    <input type="number" id="inputPassword6" class="form-control">
+                <div class="col">
+                    <input type="text" id="inputName" class="form-control">
                 </div>
             </div>
             <div class="item row g-3">
-                <div class="col-auto">
-                    <label for="inputPassword6" class="col-form-label">Matrícula profesional</label>
+                <div class="col">
+                    <label for="inputID" class="col-form-label">Cédula</label>
                 </div>
-                <div class="col-auto">
-                    <input type="number" id="inputPassword6" class="form-control">
-                </div>
-            </div>
-            <div class="item row g-3">
-                <div class="col-auto">
-                    <label for="inputPassword6" class="col-form-label">Teléfono</label>
-                </div>
-                <div class="col-auto">
-                    <input type="number" id="inputPassword6" class="form-control">
+                <div class="col">
+                    <input type="number" id="inputID" class="form-control">
                 </div>
             </div>
             <div class="item row g-3">
-                <div class="col-auto">
-                    <label for="inputPassword6" class="col-form-label">E-mail</label>
+                <div class="col">
+                    <label for="inputTP" class="col-form-label">Matrícula profesional</label>
                 </div>
-                <div class="col-auto">
-                    <input type="email" id="inputPassword6" class="form-control">
-                </div>
-            </div>
-            <div class="item row g-3">
-                <div class="col-auto">
-                    <label for="inputPassword6" class="col-form-label">Usuario</label>
-                </div>
-                <div class="col-auto">
-                    <input type="text" id="inputPassword6" class="form-control">
+                <div class="col">
+                    <input type="number" id="inputTP" class="form-control">
                 </div>
             </div>
             <div class="item row g-3">
-                <div class="col-auto">
-                    <label for="inputPassword6" class="col-form-label">Contraseña</label>
+                <div class="col">
+                    <label for="inputTel" class="col-form-label">Teléfono</label>
                 </div>
-                <div class="col-auto">
-                    <input type="password" id="inputPassword6" class="form-control">
+                <div class="col">
+                    <input type="tel" id="inputTel" class="form-control">
                 </div>
             </div>
             <div class="item row g-3">
-                <div class="col-auto">
-                    <label for="inputPassword6" class="col-form-label">Confirmar contraseña</label>
+                <div class="col">
+                    <label for="inputEmail" class="col-form-label">E-mail</label>
                 </div>
-                <div class="col-auto">
-                    <input type="password" id="inputPassword6" class="form-control">
+                <div class="col">
+                    <input type="email" id="inputEmail" class="form-control">
+                </div>
+            </div>
+            <div class="item row g-3">
+                <div class="col">
+                    <label for="inputUser" class="col-form-label">Usuario</label>
+                </div>
+                <div class="col">
+                    <input type="text" id="inputUser" class="form-control">
+                </div>
+            </div>
+            <div class="item row g-3">
+                <div class="col">
+                    <label for="inputPassword" class="col-form-label">Contraseña</label>
+                </div>
+                <div class="col">
+                    <input type="password" id="inputPassword" class="form-control">
+                </div>
+            </div>
+            <div class="item row g-3">
+                <div class="col">
+                    <label for="inputRepeatPassword" class="col-form-label">Confirmar contraseña</label>
+                </div>
+                <div class="col">
+                    <input type="password" id="inputRepeatPassword" class="form-control">
                 </div>
             </div>
             <button type="submit" class="btn btn-primary">Ingresar</button>
             <span class="register-link">¿Ya tienes cuenta?</span>
-            <a href="/html/cliente/login.html">Inicia sesión</a>
+            <a class="link" href="/html/veterinario/login.html">Inicia sesión</a>
         </div>
         <footer>
             <h6>Misión TIC Todos los derechos reservados ©</h6>
