Estilos dashboard ok

--- a/html/cliente/dashboard.html
+++ b/html/cliente/dashboard.html
@@ -51,47 +51,47 @@
                         </thead>
                         <tbody>
                             <tr>
-                                <th scope="row">01/09/2022 4:00 pm</th>
+                                <td scope="row">01/09/2022 4:00 pm</th>
                                 <td>Desparasitación</td>
                                 <td>Pendiente</td>
                                 <td>Mauricio Acosta</td>
                                 <td>Firulais</td>
                                 <td>
-                                    <i class="bi bi-pencil-square"></i>
-                                    <i class="bi bi-x-square"></i>
+                                    <i class="table-icon bi bi-pencil-square"></i>
+                                    <i class="table-icon bi bi-x-square"></i>
                                 </td>
                             </tr>
                             <tr>
-                                <th scope="row">07/09/2022 2:00 pm</th>
+                                <td scope="row">07/09/2022 2:00 pm</th>
                                 <td>Laboratorio</td>
                                 <td>Cancelada</td>
                                 <td>Ana Vergel</td>
                                 <td>Pancha</td>
                                 <td>
-                                    <i class="bi bi-pencil-square"></i>
-                                    <i class="bi bi-x-square"></i>
+                                    <i class="table-icon bi bi-pencil-square"></i>
+                                    <i class="table-icon bi bi-x-square"></i>
                                 </td>
                             </tr>
                             <tr>
-                                <th scope="row">10/09/2022 10:00 am</th>
+                                <td scope="row">10/09/2022 10:00 am</th>
                                 <td>Vacunación</td>
                                 <td>Pendiente</td>
                                 <td>Mauricio Acosta</td>
                                 <td>Pancha</td>
                                 <td>
-                                    <i class="bi bi-pencil-square"></i>
-                                    <i class="bi bi-x-square"></i>
+                                    <i class="table-icon bi bi-pencil-square"></i>
+                                    <i class="table-icon bi bi-x-square"></i>
                                 </td>
                             </tr>
                             <tr>
-                                <th scope="row">15/09/2022 12:00 pm</th>
+                                <td scope="row">15/09/2022 12:00 pm</th>
                                 <td>Chequeo</td>
                                 <td>Pendiente</td>
                                 <td>Ana Vergel</td>
                                 <td>Bigotes</td>
                                 <td>
-                                    <i class="bi bi-pencil-square"></i>
-                                    <i class="bi bi-x-square"></i>
+                                    <i class="table-icon bi bi-pencil-square"></i>
+                                    <i class="table-icon bi bi-x-square"></i>
                                 </td>
                             </tr>
                         </tbody>
