--- a/html/veterinario/dashboard.html
+++ b/html/veterinario/dashboard.html
@@ -33,54 +33,54 @@
                                 <th scope="col">Fecha y hora</th>
                                 <th scope="col">Tipo de consulta</th>
                                 <th scope="col">Estado</th>
-                                <th scope="col">Especialista</th>
+                                <th scope="col">Responsable</th>
                                 <th scope="col">Mascota</th>
                                 <th scope="col">Opciones</th>
                             </tr>
                         </thead>
                         <tbody>
                             <tr>
-                                <th scope="row">01/09/2022 4:00 pm</th>
+                                <td scope="row">11/09/2022 8:00 am</th>
                                 <td>Desparasitación</td>
-                                <td>Pendiente</td>
-                                <td>Mauricio Acosta</td>
-                                <td>Firulais</td>
+                                <td>Completada</td>
+                                <td>Sergio Castillo</td>
+                                <td>Lucky</td>
                                 <td>
-                                    <i class="bi bi-pencil-square"></i>
-                                    <i class="bi bi-x-square"></i>
+                                    <i class="table-icon bi bi-pencil-square"></i>
+                                    <i class="table-icon bi bi-x-square"></i>
                                 </td>
                             </tr>
                             <tr>
-                                <th scope="row">07/09/2022 2:00 pm</th>
+                                <td scope="row">11/09/2022 10:00 am</th>
                                 <td>Laboratorio</td>
                                 <td>Cancelada</td>
-                                <td>Ana Vergel</td>
-                                <td>Pancha</td>
+                                <td>Camila Soto</td>
+                                <td>Panterita</td>
                                 <td>
-                                    <i class="bi bi-pencil-square"></i>
-                                    <i class="bi bi-x-square"></i>
+                                    <i class="table-icon bi bi-pencil-square"></i>
+                                    <i class="table-icon bi bi-x-square"></i>
                                 </td>
                             </tr>
                             <tr>
-                                <th scope="row">10/09/2022 10:00 am</th>
+                                <td scope="row">11/09/2022 10:00 am</th>
                                 <td>Vacunación</td>
-                                <td>Pendiente</td>
-                                <td>Mauricio Acosta</td>
-                                <td>Pancha</td>
+                                <td>Completada</td>
+                                <td>Valentina Peña</td>
+                                <td>Tony</td>
                                 <td>
-                                    <i class="bi bi-pencil-square"></i>
-                                    <i class="bi bi-x-square"></i>
+                                    <i class="table-icon bi bi-pencil-square"></i>
+                                    <i class="table-icon bi bi-x-square"></i>
                                 </td>
                             </tr>
                             <tr>
-                                <th scope="row">15/09/2022 12:00 pm</th>
+                                <td scope="row">11/09/2022 12:00 pm</th>
                                 <td>Chequeo</td>
                                 <td>Pendiente</td>
-                                <td>Ana Vergel</td>
+                                <td>Carlos Rincón</td>
                                 <td>Bigotes</td>
                                 <td>
-                                    <i class="bi bi-pencil-square"></i>
-                                    <i class="bi bi-x-square"></i>
+                                    <i class="table-icon bi bi-pencil-square"></i>
+                                    <i class="table-icon bi bi-x-square"></i>
                                 </td>
                             </tr>
                         </tbody>
