--- a/html/veterinario/medical-history.html
+++ b/html/veterinario/medical-history.html
@@ -21,117 +21,119 @@
                 <a class="btn btn-primary" href="/index.html" role="button">Regresar</a>
             </div>
         </div>
-        <span class="main-title">Esta es tu agenda de hoy</span>
+        <div class="row">
+            <span class="main-title">Esta es tu agenda de hoy</span>
             <div class="form">
-                <div class="item row">
+                <div class="item row g-3">
                     <div class="item-component">
-                        <div class="col-auto">
+                        <div class="col">
                             <label for="inputPassword6" class="col-form-label">Fecha</label>
                         </div>
-                        <div class="col-auto">
+                        <div class="col">
                             <input type="text" id="inputPassword6" class="form-control">
                         </div>
                     </div>
                     <div class="item-component">
-                        <div class="col-auto">
+                        <div class="col">
                             <label for="inputPassword6" class="col-form-label">Hora</label>
                         </div>
-                        <div class="col-auto">
+                        <div class="col">
                             <input type="text" id="inputPassword6" class="form-control">
                         </div>
                     </div>
                     <div class="item-component">
-                        <div class="col-auto">
+                        <div class="col">
                             <label for="inputPassword6" class="col-form-label">Tipo de consulta</label>
                         </div>
-                        <div class="col-auto">
+                        <div class="col">
                             <input type="text" id="inputPassword6" class="form-control">
                         </div>
                     </div>
                 </div>
-                <div class="item row">
+                <div class="item row g-3">
                     <div class="item-component">
-                        <div class="col-auto">
+                        <div class="col">
                             <label for="inputPassword6" class="col-form-label">Responsable</label>
                         </div>
-                        <div class="col-auto">
+                        <div class="col">
                             <input type="text" id="inputPassword6" class="form-control">
                         </div>
                     </div>
                     <div class="item-component">
-                        <div class="col-auto">
+                        <div class="col">
                             <label for="inputPassword6" class="col-form-label">Nombre mascota</label>
                         </div>
-                        <div class="col-auto">
+                        <div class="col">
                             <input type="text" id="inputPassword6" class="form-control">
                         </div>
                     </div>
                 </div>
-                <div class="item row">
+                <div class="item row g-3">
                     <div class="item-component">
-                        <div class="col-auto">
+                        <div class="col">
                             <label for="inputPassword6" class="col-form-label">Raza</label>
                         </div>
-                        <div class="col-auto">
+                        <div class="col">
                             <input type="text" id="inputPassword6" class="form-control">
                         </div>
                     </div>
                     <div class="item-component">
-                        <div class="col-auto">
+                        <div class="col">
                             <label for="inputPassword6" class="col-form-label">Edad</label>
                         </div>
-                        <div class="col-auto">
+                        <div class="col">
                             <input type="text" id="inputPassword6" class="form-control">
                         </div>
                     </div>
                     <div class="item-component">
-                        <div class="col-auto">
+                        <div class="col">
                             <label for="inputPassword6" class="col-form-label">Peso</label>
                         </div>
-                        <div class="col-auto">
+                        <div class="col">
                             <input type="text" id="inputPassword6" class="form-control">
                         </div>
                     </div>
                 </div>
-                <div class="item row">
+                <div class="item row g-3">
                     <div class="item-component">
-                        <div class="col-auto">
+                        <div class="col">
                             <label for="inputPassword6" class="col-form-label">FC</label>
                         </div>
-                        <div class="col-auto">
+                        <div class="col">
                             <input type="text" id="inputPassword6" class="form-control">
                         </div>
                     </div>
                     <div class="item-component">
-                        <div class="col-auto">
+                        <div class="col">
                             <label for="inputPassword6" class="col-form-label">FR</label>
                         </div>
-                        <div class="col-auto">
+                        <div class="col">
                             <input type="text" id="inputPassword6" class="form-control">
                         </div>
                     </div>
                     <div class="item-component">
-                        <div class="col-auto">
+                        <div class="col">
                             <label for="inputPassword6" class="col-form-label">Temperatura</label>
                         </div>
-                        <div class="col-auto">
+                        <div class="col">
                             <input type="text" id="inputPassword6" class="form-control">
                         </div>
                     </div>
                 </div>
-                <div class="item row">
+                <div class="item row g-3">
                     <div class="item-component">
-                        <div class="col-auto">
+                        <div class="col">
                             <label for="inputPassword6" class="col-form-label">Recomendaciones</label>
                         </div>
-                        <div class="col-auto">
+                        <div class="col">
                             <input type="text" id="inputPassword6" class="form-control">
                         </div>
                     </div>
                 </div>
                 <button type="submit" class="btn btn-primary">Guardar</button>
             </div>
-        <button type="submit" class="btn btn-primary col-1">Cerrar sesión</button>
+        <button type="submit" class="btn btn-primary col-auto">Cerrar sesión</button>
+        </div>
         <footer>
             <h6>Misión TIC Todos los derechos reservados ©</h6>
         </footer>
